<?xml version="1.0"?>
<package format="2">
  <name>realsense_gazebo_plugin</name>
  <version>0.0.1</version>
  <description>Intel RealSense R200 Gazebo plugin package</description>
  <author email="missrisalaheddine@gmail.com">Salah-Eddine Missri</author>
  <maintainer email="rpolvara@lincoln.ac.uk">Riccardo Polvara</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_ros</depend>
  <depend>roscpp</depend>
  <depend>depth_image_proc</depend>
  <depend>image_transport</depend>
  <depend>camera_info_manager</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <export>
    <gazebo_ros
      plugin_path="${prefix}/lib"
      gazebo_media_path="${prefix}"
      gazebo_model_path="${prefix}/models"
      />
  </export>
</package>
